# SKIRT9

./: .clang-format  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  README.md  README.txt  configSKIRT.sh  configSKIRT_debug.sh  downloadResources.sh  dummy.txt  dummy2.txt  dummy3.txt  formatSourceCode.sh  makeHTML.sh  makeSKIRT.sh  makeSKIRT_debug.sh
Docs/doxstyle/: Block.cpp  Block.hpp  CMakeLists.txt  Chunk.cpp  Chunk.hpp  DoxStyleMain.cpp  DoxStyleMain.hpp
MakeUp/: CMakeLists.txt
MakeUp/main/: CMakeLists.txt  MakeUp.rc  MakeUpMain.cpp  mirror.icns
SKIRT/: CMakeLists.txt
SKIRT/core/: AbsorptionOnlyMaterialMixDecorator.cpp  AbsorptionOnlyMaterialMixDecorator.hpp  AbstractPlanarCutsProbe.hpp  AbstractPlanarCutsStateProbe.hpp  AbstractWavelengthGridProbe.cpp  AbstractWavelengthGridProbe.hpp  AbstractWavelengthProbe.cpp  AbstractWavelengthProbe.hpp  AdaptiveMeshGeometry.cpp  AdaptiveMeshGeometry.hpp  AdaptiveMeshInterface.hpp  AdaptiveMeshMedium.cpp  AdaptiveMeshMedium.hpp  AdaptiveMeshSnapshot.cpp  AdaptiveMeshSnapshot.hpp  AdaptiveMeshSource.cpp  AdaptiveMeshSource.hpp  AdaptiveMeshSpatialGrid.cpp  AdaptiveMeshSpatialGrid.hpp  AllCellsLibrary.cpp  AllCellsLibrary.hpp  AllSkyInstrument.cpp  AllSkyInstrument.hpp  AllSkyProjection.cpp  AllSkyProjection.hpp  AllSkyProjectionForm.cpp  AllSkyProjectionForm.hpp  AnchoredMesh.hpp  AngularDistribution.cpp  AngularDistribution.hpp  AnnulusGeometry.cpp  AnnulusGeometry.hpp  AtPositionsForm.cpp  AtPositionsForm.hpp  AxAngularDistribution.cpp  AxAngularDistribution.hpp  AxGeometry.cpp  AxGeometry.hpp  AxPowerLawRedistributeGeometryDecorator.cpp  AxPowerLawRedistributeGeometryDecorator.hpp  (+991 more)
SKIRT/fitsio/: CMakeLists.txt  cfileio.c  eval_l.c  eval_tab.h  eval_y.c  fitscore.c  group.c  putcol.c
SKIRT/gas/: CMakeLists.txt  Gas.cpp  Gas.hpp
SKIRT/main/: CMakeLists.txt  SkirtCommandLineHandler.cpp  SkirtCommandLineHandler.hpp  SkirtMain.cpp
SKIRT/mpi/: CMakeLists.txt  ProcessManager.cpp  ProcessManager.hpp
SKIRT/resources/: ExpectedResources.txt  README.txt
SKIRT/tetgen/: CMakeLists.txt  tetgen.cxx  tetgen.h
SKIRT/utils/: AngularDistributionInterface.hpp  Box.cpp  Box.hpp  BoxSearch.cpp  BoxSearch.hpp  BulkVelocityInterface.hpp  CMakeLists.txt  ChunkMaker.cpp  ChunkMaker.hpp  Constants.cpp  Constants.hpp  Cubic.hpp  CylCell.cpp  CylCell.hpp  CylindricalCell.cpp  CylindricalCell.hpp  Direction.cpp  Direction.hpp  DustGridPath.cpp  DustGridPath.hpp  EntityCollection.cpp  EntityCollection.hpp  HomogeneousTransform.cpp  HomogeneousTransform.hpp  LockFree.hpp  NR.cpp  NR.hpp  NRImpl.cpp  NRImpl.hpp  PathSegmentGenerator.cpp  PathSegmentGenerator.hpp  PhotonPacket.cpp  PhotonPacket.hpp  PlanckFunction.cpp  PlanckFunction.hpp  PolarizationProfileInterface.hpp  PolarizationStateInterface.hpp  Position.cpp  Position.hpp  Quadratic.hpp  (+32 more)
SKIRT/voro/: CMakeLists.txt  c_loops.cc  c_loops.hh  cell.cc  cell.hh  common.cc  common.hh  config.hh  container.cc  container.hh  container_prd.cc  container_prd.hh  rad_option.hh  unitcell.cc  unitcell.hh  v_base.cc  v_base.hh  v_base_wl.hh  v_compute.cc  v_compute.hh  voro_cell.cc  voro_cell.hh  voro_common.hh  voro_compute.cc  voro_compute.hh  voro_config.hh  voro_container.cc  voro_container.hh  voro_loop.hh  wall.cc  wall.hh  worklist.hh
SMILE/: CMakeLists.txt
SMILE/fundamentals/: Array.hpp  ArrayTable.hpp  Basics.hpp  BooleanExpression.cpp  BooleanExpression.hpp  CMakeLists.txt  CommandLineArguments.cpp  CommandLineArguments.hpp  CompileTimeUtils.hpp  Console.cpp  Console.hpp  FatalError.cpp  FatalError.hpp  Indices.hpp  ShortArray.hpp  SignalHandler.cpp  SignalHandler.hpp  StringUtils.cpp  StringUtils.hpp  System.cpp  System.hpp  Table.hpp  TableImpl.hpp  XmlReader.cpp  XmlReader.hpp  XmlWriter.cpp  XmlWriter.hpp
SMILE/schema/: AbstractDoublePropertyHandler.cpp  AbstractDoublePropertyHandler.hpp  AbstractItemPropertyHandler.cpp  AbstractItemPropertyHandler.hpp  BoolPropertyHandler.cpp  BoolPropertyHandler.hpp  CMakeLists.txt  DoubleListPropertyHandler.cpp  DoubleListPropertyHandler.hpp  DoublePropertyHandler.cpp  DoublePropertyHandler.hpp  EnumPropertyHandler.cpp  EnumPropertyHandler.hpp  GhostItem.cpp  GhostItem.hpp  IntPropertyHandler.cpp  IntPropertyHandler.hpp  Item.cpp  Item.hpp  ItemInfo.hpp  ItemListPropertyHandler.cpp  ItemListPropertyHandler.hpp  ItemPropertyHandler.cpp  ItemPropertyHandler.hpp  ItemRegistry.cpp  ItemRegistry.hpp  ItemUtils.cpp  ItemUtils.hpp  NameManager.cpp  NameManager.hpp  PropertyAccessor.hpp  PropertyDef.cpp  PropertyDef.hpp  PropertyHandler.cpp  PropertyHandler.hpp  PropertyHandlerVisitor.hpp  SchemaDef.cpp  SchemaDef.hpp  StringPropertyHandler.cpp  StringPropertyHandler.hpp  (+4 more)
SMILE/serialize/: CMakeLists.txt  ConsoleHierarchyCreator.cpp  ConsoleHierarchyCreator.hpp  LatexHierarchyWriter.cpp  LatexHierarchyWriter.hpp  XmlHierarchyCreator.cpp  XmlHierarchyCreator.hpp  XmlHierarchyWriter.cpp  XmlHierarchyWriter.hpp
SMILE/shapes/: CMakeLists.txt  Canvas.cpp  Canvas.hpp  CenterShape.cpp  CenterShape.hpp  ColorDecorator.cpp  ColorDecorator.hpp  ConvexPolygon.cpp  ConvexPolygon.hpp  PolygonShape.cpp  PolygonShape.hpp  RectangleShape.cpp  RectangleShape.hpp  Shape.cpp  Shape.hpp  ShapeCanvas.cpp  ShapeCanvas.hpp  ShapeDecorator.cpp  ShapeDecorator.hpp  ShapeGroup.cpp  ShapeGroup.hpp  ShapeItem.cpp  ShapeItem.hpp  ShapeRegistry.cpp  ShapeRegistry.hpp  ShapesCommandLineHandler.cpp  ShapesCommandLineHandler.hpp  ShapesMain.cpp  ShapesUnitDef.cpp  ShapesUnitDef.hpp  WidthDecorator.cpp  WidthDecorator.hpp
SMILE/smiletool/: CMakeLists.txt  SmileToolCommandLineHandler.cpp  SmileToolCommandLineHandler.hpp  SmileToolMain.cpp
SMILE/wizard/: BasicChoiceWizardPane.cpp  BasicChoiceWizardPane.hpp  BoolPropertyWizardPane.cpp  BoolPropertyWizardPane.hpp  CMakeLists.txt  CreateRootWizardPane.cpp  CreateRootWizardPane.hpp  DoubleListPropertyWizardPane.cpp  DoubleListPropertyWizardPane.hpp  DoublePropertyWizardPane.cpp  DoublePropertyWizardPane.hpp  EnumPropertyWizardPane.cpp  EnumPropertyWizardPane.hpp  IntPropertyWizardPane.cpp  IntPropertyWizardPane.hpp  (+20 more)
(+18 files in other folders)
