# //////////////////////////////////////////////////////////////////
# ///     The SKIRT project -- advanced radiative transfer       ///
# ///       © Astronomical Observatory, Ghent University         ///
# //////////////////////////////////////////////////////////////////

# ------------------------------------------------------------------
# Builds the MakeUp desktop GUI wizard for editing SMILE data sets
# ------------------------------------------------------------------

# add all relevant subdirectories
add_subdirectory(main)
